[package]
name = "evergreen"
version = "0.0.0"
edition = "2021"
license = "BSL-1.0"
authors = ["Gabriel Falcão <gabriel@nacaolivre.org>"]
description = "Note-taking 4 POSIX environents"
documentation = "https://docs.rs/evergreen"
readme = "README.md"
homepage = "https://github.com/gabrielfalcao/evergreen"
exclude = ["tests"]

[dependencies]
bytes = { version = "1.5.0", features = ["serde"] }
chacha20 = { version = "0.9.1", features = ["std", "zeroize"] }
clap = { version = "4.4.6", features = ["derive", "unicode", "env", "wrap_help", "string"] }
console = "0.15.7"
env_logger = "0.10.0"
log = { version = "0.4.20", features = ["std", "serde"] }
markdown = "0.3.0"
openpgp = "0.3.0"
refinery = { version = "0.8.11", features = ["rusqlite"] }
rusqlite = { version = "0.29.0", features = [] }

[lib]
name = "evergreen"
path = "src/lib.rs"
